internal/config/testdata/invalid-config/SourceFolder.hjson
{
  APIAppCredentials:
  {
    ClientID: client-id
    ClientSecret: client-secret
  }
  Account: youremail@domain.com
  SecretsBackendType: auto
  Jobs:
  [
    {
      SourceFolder: ./testdata/non-existent
      MakeAlbums:
      {
        Enabled: true
        Use: folderName
      }
      DeleteAfterUpload: false
      IncludePatterns: []
      ExcludePatterns: []
    }
  ]
}